# 2024.1_G4_Funcional

./: .gitignore  404.html  README.md  about.html  hello.hs  index.html  instalacao.html  mkdocs.yml  participacoes.html  resultados-finais.html  search.html  sitemap.xml
about/: index.html
docs/: about.md  index.md  instalacao.md  participacoes.md  resultados-finais.md
instalacao/: index.html
participacoes/: index.html
resultados-finais/: index.html
search/: search_index.json
src/: Dockerfile  G4FuncionalTermo.cabal  Makefile  palavras.txt
src/app/: Game.hs  Main.hs  Utils.hs
